--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,12 +2,41 @@
 <html>
 	<head>
 		<title>{{ page.title }}</title>
-		<link rel="stylesheet" rev="stylesheet" type="text/css" media="screen" href="css/default.css" />
+		<link rel="stylesheet" rev="stylesheet" type="text/css" media="screen" href="/css/default.css" />
+		<link rel="stylesheet" rev="stylesheet" type="text/css" media="screen" href="/css/syntax.css" />
+	
 	</head>
 
 	<body>
 		<h1>{{ page.title }}</h1>
 
 		{{ content }}
+		
+		<div class="sidebar">
+			
+			<div class="fineprint">
+				<a rel="license" href="http://creativecommons.org/licenses/by-sa/2.0/uk/"><img alt="Creative Commons License" style="border-width:0" src="http://i.creativecommons.org/l/by-sa/2.0/uk/88x31.png" /></a><br />
+				Copyright &copy; 2010 <a href="mailto:micmath+jsdoc@gmail.com">Michael Mathews</a>: <a rel="license" href="http://creativecommons.org/licenses/by-sa/2.0/uk/">Some rights reserved</a>.
+			</div>
+			
+			<div id="archive">
+				<h2>Archive</h2>
+				
+				<ul>{% for post in site.posts %}
+					<li>
+						<a href="{{ post.url }}" title="{{ post.title }}">
+							<span class="date">
+								<span class="day">{{ post.date | date: '%d' }}</span>
+								<span class="month">
+									<abbr>{{ post.date | date: '%b' }}</abbr>
+								</span>
+								<span class="year">{{ post.date | date: '%Y' }}</span>
+							</span>
+							<span class="title">{{ post.title }}</span>
+						</a>
+					</li>
+				{% endfor %}</ul>
+			</div>
+		</div>
 	</body>
 </html>
