--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,8 +2,9 @@
 <html>
 	<head>
 		<title>{{ page.title }}</title>
-		<link rel="stylesheet" rev="stylesheet" type="text/css" media="screen" href="/css/default.css" />
-		<link rel="stylesheet" rev="stylesheet" type="text/css" media="screen" href="/css/syntax.css" />
+		<meta http-equiv="Content-Type" content="text/html;charset=utf-8">
+		<link rel="stylesheet" type="text/css" media="screen" href="/css/default.css" />
+		<link rel="stylesheet" type="text/css" media="screen" href="/css/syntax.css" />
 	
 	</head>
 
