--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>{{ page.title }}</title>
+		<title>micmath projects | {{ page.title }}</title>
 		<meta http-equiv="Content-Type" content="text/html;charset=utf-8">
 		<link rel="stylesheet" type="text/css" media="screen" href="/css/default.css" />
 		<link rel="stylesheet" type="text/css" media="screen" href="/css/syntax.css" />
