--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,34 +9,44 @@
 	</head>
 
 	<body>
-		<h1>{{ page.title }}</h1>
-
-		{{ content }}
-		
-		<div class="sidebar">
-			
-			<div class="fineprint">
-				<a rel="license" href="http://creativecommons.org/licenses/by-sa/2.0/uk/"><img alt="Creative Commons License" style="border-width:0" src="http://i.creativecommons.org/l/by-sa/2.0/uk/88x31.png" /></a><br />
-				Copyright &copy; 2010 <a href="mailto:micmath+jsdoc@gmail.com">Michael Mathews</a>: <a rel="license" href="http://creativecommons.org/licenses/by-sa/2.0/uk/">Some rights reserved</a>.
+		<div id="wrapper">
+			<div id="nav">
+				<ul>
+					<li><a href="/">Home</a></li>
+					<li><a href="/atom.xml">Feed</a></li>
+				</ul>
 			</div>
 			
-			<div id="archive">
-				<h2>Archive</h2>
+			<div id="header"><h1>{{ page.title }}</h1></div>
+			
+			<div id="main">
+				{{ content }}
+			</div>
+			
+			<div id="sidebar">
 				
-				<ul>{% for post in site.posts %}
-					<li>
-						<a href="{{ post.url }}" title="{{ post.title }}">
-							<span class="date">
-								<span class="day">{{ post.date | date: '%d' }}</span>
-								<span class="month">
-									<abbr>{{ post.date | date: '%b' }}</abbr>
+				<div id="archive">
+					<h2>Archive</h2>
+					
+					<ul>{% for post in site.posts %}
+						<li>
+							<a href="{{ post.url }}" title="{{ post.title }}">
+								<span class="date">
+									<span class="day">{{ post.date | date: '%d' }}</span>
+									<span class="month">
+										<abbr>{{ post.date | date: '%b' }}</abbr>
+									</span>
+									<span class="year">{{ post.date | date: '%Y' }}</span>
 								</span>
-								<span class="year">{{ post.date | date: '%Y' }}</span>
-							</span>
-							<span class="title">{{ post.title }}</span>
-						</a>
-					</li>
-				{% endfor %}</ul>
+								<span class="title">{{ post.title }}</span>
+							</a>
+						</li>
+					{% endfor %}</ul>
+				</div>
+			</div>
+			
+			<div id="footer" class="fineprint">
+				Copyright &copy;2010 <a href="mailto:micmath+jsdoc@gmail.com">Michael Mathews</a>: <a rel="license" href="http://creativecommons.org/licenses/by-sa/2.0/uk/">Some rights reserved</a>.
 			</div>
 		</div>
 	</body>
