--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -34,7 +34,7 @@
 					<h2>Tags</h2>
 					
 					<ul>{% for tag in site.tagsUsed %}
-					<li><a href="tags.html#{{ tag }}">{{ tag }}</a></li>
+					<li><a href="/tags.html#{{ tag }}">{{ tag }}</a></li>
 					{% endfor %}</ul>
 				</div>
 				{% endunless %}
