--- a/Jake/templates/foot.mustache
+++ b/Jake/templates/foot.mustache
@@ -1,7 +1,7 @@
 
     <footer>
         Copyright &#169; 2011 Michael Mathews &lt;micmath@gmail.com><br>
-        This site is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-sa/3.0/">Creative Commons Attribution-ShareAlike 3.0 Unported License</a>.
+        This site is <a href="https://github.com/micmath/micmath.github.com">open source</a> and licensed under the <a rel="license" href="http://creativecommons.org/licenses/by-sa/3.0/">Creative Commons Attribution-ShareAlike 3.0 Unported License</a>.
 	</footer>
 
 	<script>prettyPrint()</script>
