--- a/Jake/templates/head.mustache
+++ b/Jake/templates/head.mustache
@@ -9,7 +9,56 @@
 	<link rel="stylesheet" href="../lib/prettify.css" />
 	<script src="../lib/prettify.js"></script>
 	
+	<script type="text/javascript">
+	    /* Make HTML 5 elements stylable in IE */
+        document.createElement('header');
+        document.createElement('nav');
+        document.createElement('article');
+        document.createElement('footer');
+        document.createElement('hgroup');
+	</script>
+	
 	<style>
+	body { font: .85em 'Helvetica Neue', Helvetica, Arial, sans-serif; }
+	body { padding: 0; margin: 0; }
+	
+	a, a:visited, a:active { color: #605C89; }
+	
+	dl{
+	    margin-left: 0;
+	    padding-left: 0;
+	}
+	dt {
+	    color: #919AA3;
+	    margin-left: 16px;
+	    padding-left: 4px;
+	}
+	dd {
+	    margin-left: 16px;
+	    padding-left: 4px;
+	}
+	
+	code { font: .85em Consolas, "Lucida Console", Monaco, monospace; }
+	
+	/* Make HTML 5 elements display block-level for consistent styling */
+	header, nav, article, footer, address { display: block; }
+    
+    header {
+        background-color: #EBEBEB;
+        color: #006FBB;
+        margin: 0;
+        margin-bottom: 32px;
+        padding: 18px;
+        font-size: 2.4em;
+        font-weight: bold;
+    }
+    
+    h1 { color: #B93A38; }
+    
+    .main {
+        margin: 18px;
+    }
+    
 	pre {
 	    display: block;
 	    border: 1px solid #999;
@@ -17,13 +66,25 @@
 	    padding: 8px;
 	}
 	.example dt { font-weight: bold; }
+	
+	footer
+	{
+		margin: 16px;
+		margin-top: 32px;
+		font-style: italic;
+		font-size: .8em;
+	}
 	</style>
 </head>
 
 <body>
 	<header>
-	    {{#title}}<h1>{{title}}</h1>{{/title}}
+	    @use JSDoc
 	</header>
 	
 	<nav>
 	</nav>
+	
+	<div class="main">
+	{{#title}}<h1>{{title}}</h1>{{/title}}
+	
