--- a/Jake/templates/head.mustache
+++ b/Jake/templates/head.mustache
@@ -63,6 +63,7 @@
 			padding: 18px;
 			font-size: 2.4em;
 			font-weight: bold;
+			border-bottom: 1px #C6C6C6 solid;
 		}
 		
 		h1 { color: #B93A38; }
