Added links to tag dictionary.

--- a/Jake/templates/head.mustache
+++ b/Jake/templates/head.mustache
@@ -38,9 +38,13 @@
 		
 		dt
 		{
-			color: #919AA3;
 			margin-left: 16px;
 			padding-left: 4px;
+			margin-top: 8px;
+		}
+		
+		dt a, dt a:visited {
+			color: #3E00B6;
 		}
 		
 		dd
