Added link-back to header of all pages.

--- a/Jake/templates/head.mustache
+++ b/Jake/templates/head.mustache
@@ -5,6 +5,7 @@
 	{{#keywords}}<meta name="keywords" content="{{keywords}}">{{/keywords}}
     {{#description}}<meta name="description" content="{{description}}">{{/description}}
     
+    
 	<title>Use JSDoc{{#title}}: {{title}}{{/title}}</title>
 	
 	<link rel="stylesheet" href="lib/prettify.css" />
@@ -70,6 +71,11 @@
 			border-bottom: 1px #C6C6C6 solid;
 		}
 		
+		header a, header a:visited {
+		    color: #006FBB;
+			text-decoration: none;
+		}
+		
 		h1 { color: #B93A38; }
 		article { margin: 18px; }
 		
@@ -96,7 +102,7 @@
 
 <body>
 	<header>
-	    @use JSDoc
+	    <a href="./index.html">@use JSDoc</a>
 	</header>
 	
 	<nav>
